# usdmgr-conf

./: .gitignore  convert.py  install.py  pip-requirements.txt  readme  usd.json  vscode_settings_ref.json
mgr/: __main__.py  download.py  install.py  utils.py
templates/: convert.py
templates/usd-2311/cmake/: openusdConfig.cmake
templates/usd-2311/cmake/_/: openusdTargets-release.cmake  openusdTargets.cmake
templates/usd-2311/cmake/py39/: openusdTargets-debug.cmake  openusdTargets.cmake
test/: openusdConfig.cmake  openusdTargets-debug.cmake  openusdTargets-release.cmake  openusdTargets.cmake
test_py/: openusdConfig.cmake  openusdTargets-debug.cmake  openusdTargets-release.cmake  openusdTargets.cmake
testproject/: CMakeLists.txt  main.cpp
usd-2311/cmake/win64/_/: openusdTargets-debug.cmake
usd-2311/cmake/win64/py39/: openusdTargets-release.cmake
